microk8s-hono-api/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hono-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
  # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - api-dev.testdu.uib.no
      secretName: hono-api-ingress-tls
  rules:
    - host: api-dev.testdu.uib.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hono-api
                port:
                  number: 80
